--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
           <!-- Styles -->
           <link rel="stylesheet" href = "style.css">
           <link href="modal.css" rel="stylesheet">
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"></script>
           <!-- Title -->
           <title>Expense Tracker</title>
 </head>
@@ -68,6 +69,6 @@
           </div>
           <script src="submit.js"></script>
           <script src="script.js"></script>
-          <script src="modal.js"></script>        
+          <script src="modal.js"></script>       
 </body>
 </html>
