Improved adaptability for landscape mobile mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   background-position: -100% 0%,0% 0%,100% 0%;
   background-repeat:no-repeat;
   animation:p9 2s infinite linear;
-  margin: 25% auto;
+  margin: 10% auto;
 }
 @media (max-width:675px)
 {
@@ -35,7 +35,7 @@
     margin: 50% auto;
   }
 }
-@media (orientation: landscape)
+@media (orientation: landscape) and (max-width:800px)
 {
   .progress-9 {
     margin: 50% auto;
