--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"></script>
           <!-- Title -->
           <title>Expense Tracker</title>
+          <!-- Favicon -->
+          <link rel="icon" type="image/png" href="favicon.png"/>
+          <link rel="icon" type="image/png" href="favicon.png"/>
           <style>
             .progress-9 {    
   --r1: 154%;
