Added fadeIn animation & adjusted title on mobile

--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
   .progress-9 {
     margin: 50% auto;
   }
+  .title {
+    font-size: 25px;
+  }
 }
 @media (orientation: landscape) and (max-width:800px)
 {
   .progress-9 {
     margin: 50% auto;
+  }
+  .title {
+    font-size: 25px;
   }
 }
 @keyframes p9 {
