Fixed anchor tag issues and titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <meta charset="UTF-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Document</title>
+          <title>Expense Tracker | By Coding_Harry</title>
           <style>
                     @import url('https://fonts.googleapis.com/css?family=Poppins:700');
 body {
@@ -158,7 +158,7 @@ footer a:hover {
                               </div>
           </div>
           <div style="margin: 15% auto;" id="button-desktop">
-                    <button style="width: 100%; margin: 0 20%;"><a href="index.html" style="text-decoration: none; color: white; text-transform: none;">Enroll Now!</a></button>
+                    <button style="width: 100%; margin: 0 20%;"><a href="tracker.html" style="text-decoration: none; color: white; text-transform: none;">Enroll Now!</a></button>
           </div>
           
           <div class="footer">
