--- a/landing-page.html
+++ b/landing-page.html
@@ -10,7 +10,7 @@
           <link href="modal.css" rel="stylesheet">
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"></script>
           <!-- Title -->
-          <title>Expense Tracker</title>
+          <title>Home | Expense Tracker</title>
           <!-- Favicon -->
           <link rel="icon" type="image/png" href="favicon.png"/>
           <style>
