--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div id="button-mobile">
         <button style="width: 35%">
           <a
-            href="index.html"
+            href="tracker.html"
             style="text-decoration: none; color: white; text-transform: none"
             >Enroll Now!</a
           >
